# hackathon2-phase1-todo-app

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini
.claude/: settings.local.json
.claude/agents/: phase1-todo-spec-auditor.md  phase1-todo-spec-validator.md  todo-app-reviewer.md
.specify/memory/: constitution.md
history/prompts/1-in-memory-todo/: 2-create-phase-i-todo-app-spec.spec.prompt.md  3-create-implementation-plan.plan.prompt.md  4-create-task-list.tasks.prompt.md  5-implementation-complete.implementation.prompt.md
history/prompts/constitution/: 1-create-project-constitution.constitution.prompt.md
specs/1-in-memory-todo/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-in-memory-todo/checklists/: requirements.md
specs/1-in-memory-todo/contracts/: todo-api-contract.md
src/todo_app/application/: repositories.py  services.py
src/todo_app/domain/: entities.py
src/todo_app/interface/: cli.py
tests/: conftest.py
tests/integration/: test_todo_flow.py
tests/unit/application/: test_repositories.py  test_services.py
tests/unit/domain/: test_entities.py
