[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-app-phase1"
version = "0.1.0"
description = "In-Memory Python Console Todo App (Phase I)"
authors = [{name = "Developer", email = "developer@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]